@@ -1,3 +1,8 @@
+== In Git
+
+=== Bugfixes
+* Cucumber::Rake::Task uses 'bundle exec' when using bundler (#626 John Firebaugh)
+
 == 0.8.4 (2010-07-12)
 
 === Bugfixes
